--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,14 +2,10 @@ workflows:
   ios-workflow:
     name: iOS Workflow
     max_build_duration: 120
-    integrations:
-      app_store_connect: codemagic
     environment:
       ios_signing:
-        distribution_type: app_store
+        distribution_type: development  # Menggunakan distribusi untuk pengembangan
         bundle_identifier: io.codemagic.fluttersample
-      vars:
-        APP_STORE_APPLE_ID: 1555555551
       flutter: stable
     scripts:
       - name: Set up code signing settings on Xcode project
@@ -46,16 +42,3 @@ workflows:
         notify:
           success: true
           failure: false
-      app_store_connect:
-        auth: integration
-
-        # Configuration related to TestFlight (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_testflight: true
-        beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
-          - group name 1
-          - group name 2
-
-        # Configuration related to App Store (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_app_store: false
