--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,14 +3,8 @@ workflows:
     name: iOS Workflow
     max_build_duration: 120
     environment:
-      ios_signing:
-        distribution_type: development  # Menggunakan profil provisioning pengembangan
-        bundle_identifier: io.codemagic.fluttersample
       flutter: stable
     scripts:
-      - name: Set up code signing settings on Xcode project
-        script: | 
-          xcode-project use-profiles
       - name: Get Flutter packages
         script: | 
           flutter packages pub get
@@ -28,8 +22,7 @@ workflows:
         script: | 
           flutter build ipa --release \
             --build-name=1.0.0 \
-            --build-number=$(($(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID") + 1)) \
-            --export-options-plist=/Users/builder/export_options.plist
+            --build-number=$(($(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID") + 1))
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
