--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,6 +14,7 @@ workflows:
       - name: Flutter analyze
         script: | 
           flutter analyze
+        ignore_failure: true # Mengabaikan kegagalan analisis jika perlu
       - name: Flutter unit tests
         script: | 
           flutter test
