--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,7 +14,7 @@ workflows:
       - name: Flutter analyze
         script: | 
           flutter analyze
-        ignore_failure: true # Mengabaikan kegagalan analisis jika perlu
+        ignore_failure: true
       - name: Flutter unit tests
         script: | 
           flutter test
@@ -24,6 +24,7 @@ workflows:
           flutter build ipa --release \
             --build-name=1.0.0 \
             --build-number=$(($(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID") + 1))
+        ignore_failure: true # Untuk melanjutkan build meskipun build ipa gagal
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
