--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -76,6 +76,7 @@ workflows:
           - ios_credentials
           - gcloud_credentials
         vars:
+          FIREBASE_PROJECT: "flutter-integration-tests"
           BUNDLE_ID: "io.codemagic.ftlflutter"
           TEST_BUNDLE_ID: "io.codemagic.ftlflutter.uitests.xctrunner"
       scripts:
