--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,40 +1,43 @@
 workflows:
-  ios-native-workflow:
-    name: iOS Native
+  ios-workflow:
+    name: iOS Workflow
     max_build_duration: 120
-    instance_type: mac_mini_m1
+    integrations:
+      app_store_connect: codemagic
     environment:
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: io.codemagic.fluttersample
       vars:
-        BUNDLE_ID: "io.codemagic.sample.iosnative"
-        XCODE_WORKSPACE: "CodemagicSample.xcworkspace" # <-- Put the name of your Xcode workspace here
-        XCODE_SCHEME: "CodemagicSample" # <-- Put the name of your Xcode scheme here
-      xcode: latest
-      cocoapods: default
+        APP_STORE_APPLE_ID: 1555555551
+      flutter: stable
     scripts:
-      - name: Install CocoaPods dependencies
+      - name: Set up code signing settings on Xcode project
         script: | 
-          pod install
-      - name: Build ipa for distribution
+          xcode-project use-profiles
+      - name: Get Flutter packages
         script: | 
-          xcodebuild \
-            -workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" \
-            -scheme "$XCODE_SCHEME" \
-            -configuration Release \
-            -sdk iphoneos \
-            archive \
-            -archivePath "$CM_BUILD_DIR/build/ios/archive/$(date +%Y%m%d%H%M%S).xcarchive"
-          
-          xcodebuild \
-            -exportArchive \
-            -archivePath "$CM_BUILD_DIR/build/ios/archive/$(date +%Y%m%d%H%M%S).xcarchive" \
-            -exportPath "$CM_BUILD_DIR/build/ios/ipa" \
-            -exportOptionsPlist "$CM_BUILD_DIR/export_options.plist"
-
+          flutter packages pub get
+      - name: Install pods
+        script: | 
+          find . -name "Podfile" -execdir pod install \;
+      - name: Flutter analyze
+        script: | 
+          flutter analyze
+      - name: Flutter unit tests
+        script: | 
+          flutter test
+        ignore_failure: true
+      - name: Flutter build ipa
+        script: | 
+          flutter build ipa --release \
+            --build-name=1.0.0 \
+            --build-number=$(($(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID") + 1)) \
+            --export-options-plist=/Users/builder/export_options.plist
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
-      - $CM_BUILD_DIR/build/ios/archive/**/*.app
-      - $CM_BUILD_DIR/build/ios/archive/**/*.dSYM
+      - flutter_drive.log
     publishing:
       email:
         recipients:
@@ -48,7 +51,10 @@ workflows:
 
         # Configuration related to TestFlight (optional)
         # Note: This action is performed during post-processing.
-        submit_to_testflight: false
+        submit_to_testflight: true
+        beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+          - group name 1
+          - group name 2
 
         # Configuration related to App Store (optional)
         # Note: This action is performed during post-processing.
