--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,6 +16,7 @@ workflows:
       - name: Flutter analyze
         script: | 
           flutter analyze
+        ignore_failure: true  # Mengabaikan kegagalan analisis kode jika diinginkan
       - name: Flutter unit tests
         script: | 
           flutter test
@@ -38,11 +39,3 @@ workflows:
         notify:
           success: true
           failure: false
-      # Jika Anda memerlukan integrasi di masa depan, tambahkan bagian ini kembali dengan konfigurasi yang benar.
-      # app_store_connect:
-      #   auth: integration
-      #   submit_to_testflight: true
-      #   beta_groups:
-      #     - group name 1
-      #     - group name 2
-      #   submit_to_app_store: false
