--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     max_build_duration: 120
     environment:
       ios_signing:
-        distribution_type: ad_hoc # Gunakan metode distribusi ad-hoc jika tidak menggunakan App Store
+        distribution_type: development # Gunakan development jika ad-hoc tidak tersedia
         bundle_identifier: io.codemagic.fluttersample
       flutter: stable
     scripts:
