--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,31 +2,37 @@ workflows:
   ios-workflow:
     name: iOS Workflow
     max_build_duration: 120
+    instance_type: mac_mini_m1
+    integrations:
+      app_store_connect: codemagic
     environment:
       ios_signing:
         distribution_type: development # Gunakan development jika ad-hoc tidak tersedia
         bundle_identifier: io.codemagic.fluttersample
       flutter: stable
+      xcode: latest
+      cocoapods: default
     scripts:
       - name: Get Flutter packages
-        script: | 
+        script: |
           flutter packages pub get
-      - name: Install pods
-        script: | 
-          find . -name "Podfile" -execdir pod install \;
+      - name: Install CocoaPods dependencies
+        script: |
+          cd ios
+          pod install
       - name: Flutter analyze
-        script: | 
+        script: |
           flutter analyze
         ignore_failure: true
       - name: Flutter unit tests
-        script: | 
+        script: |
           flutter test
         ignore_failure: true
-      - name: Flutter build ipa
-        script: | 
+      - name: Build IPA
+        script: |
           flutter build ipa --release \
             --build-name=1.0.0 \
-            --build-number=$(($(app-store-connect get-latest-build-number "$BUNDLE_ID") + 1)) \
+            --build-number=$(($(app-store-connect get-latest-build-number "$APP_STORE_APPLE_ID") + 1)) \
             --export-options-plist=/path/to/your/export_options.plist
     artifacts:
       - build/ios/ipa/*.ipa
@@ -40,4 +46,10 @@ workflows:
         notify:
           success: true
           failure: false
-      # Hapus bagian app_store_connect jika tidak digunakan
+      app_store_connect:
+        auth: integration
+        submit_to_testflight: true
+        beta_groups:
+          - group name 1
+          - group name 2
+        submit_to_app_store: false
