--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,68 +1,60 @@
 workflows:
-  ios-workflow:
-    name: iOS Workflow
+  ios-native-quick-start:
+    name: iOS Native
+    max_build_duration: 120
+    instance_type: mac_mini_m1
+    integrations:
+      app_store_connect: codemagic
     environment:
-      groups:
-        # Add the group environment variables in Codemagic UI (either in Application/Team variables) - https://docs.codemagic.io/variables/environment-variable-groups/
-        # - app_store_credentials # <-- (APP_STORE_CONNECT_ISSUER_ID, APP_STORE_CONNECT_KEY_IDENTIFIER, APP_STORE_CONNECT_PRIVATE_KEY)
-        # - certificate_credentials # <-- (CERTIFICATE_PRIVATE_KEY)
-        - other
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: io.codemagic.sample.iosnative
       vars:
-        XCODE_WORKSPACE: "swiftly.xcworkspace" # <-- Put the name of your workspace here.
-        XCODE_SCHEME: "swiftly" # <-- Put the name of your scheme here.
-        BUNDLE_ID: "io.codemagic.swiftly" # <-- Put your Bundle Id here.
-        # APP_STORE_APPLE_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
+        BUNDLE_ID: "io.codemagic.sample.iosnative"
+        XCODE_WORKSPACE: "CodemagicSample.xcworkspace"
+        XCODE_SCHEME: "CodemagicSample"
+        APP_STORE_APPLE_ID: 1555555551
       xcode: latest # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
       cocoapods: default
-    triggering:
-      events:
-        - push
-        - tag
-        - pull_request
-      branch_patterns:
-        - pattern: 'develop'
-          include: true
-          source: true
     scripts:
-      - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
-        script: |
-          keychain initialize
-      - name: Add certificates to keychain (skip if not available)
-        script: |
-          # Ensure certificates are uploaded to the correct directory
-          # security import /path/to/your/certificate.p12 -k /Users/builder/Library/codemagic-cli-tools/keychains/your-keychain.keychain-db -P your_password -A
-          echo "No certificates provided or available. Skipping certificate import."
-      - name: Use system default keychain
-        script: |
-          keychain add-certificates
-      - name: Set up code signing settings on Xcode project
-        script: |
-          xcode-project use-profiles
+      - name: Install CocoaPods dependencies
+        script: | 
+          pod install
+      - name: Set up provisioning profiles settings on Xcode project
+        script: xcode-project use-profiles
       - name: Increment build number
-        script: |
-          agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APPLE_ID") + 1))
+        script: | 
+          cd $CM_BUILD_DIR
+          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID")
+          agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
       - name: Build ipa for distribution
-        script: |
-          xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
+        script: | 
+          xcode-project build-ipa \
+            --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" \
+            --scheme "$XCODE_SCHEME"
     artifacts:
       - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
-      # app_store_connect:   # https://docs.codemagic.io/publishing-yaml/distribution
-      #     api_key: $APP_STORE_CONNECT_PRIVATE_KEY         # Contents of the API key
-      #     key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER       # Alphanumeric value that identifies the API key
-      #     issuer_id: $APP_STORE_CONNECT_ISSUER_ID         # Alphanumeric value that identifies who created the API key
-      #     submit_to_testflight: false                     # Optional boolean, defaults to false
       email:
         recipients:
-          - user1@example.com
-          - user2@example.com
+          - user_1@example.com
+          - user_2@example.com
         notify:
           success: true
-          failure: true
-      slack:
-        channel: '#builds'
-        notify_on_build_start: true
-        notify:
-          success: false
           failure: false
+      app_store_connect:
+        auth: integration
+
+        # Configuration related to TestFlight (optional)
+        # Note: This action is performed during post-processing.
+        submit_to_testflight: true
+        beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+          - group name 1
+          - group name 2
+
+        # Configuration related to App Store (optional)
+        # Note: This action is performed during post-processing.
+        submit_to_app_store: false
